<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/recipe_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/recipe_name"
            style="@style/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:text="@string/textview"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/recipe_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:text="@string/servings_text" />

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_gravity="top|end"
            android:adjustViewBounds="false"
            android:contentDescription="@string/recipe_picture"
            app:srcCompat="@drawable/ic_launcher_background" />


    </android.support.v7.widget.CardView>

</LinearLayout>