<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content">


    <TextView
        android:id="@+id/ingredient_quantity"
        android:layout_width="42dp"
        android:layout_height="16dp"
        android:layout_marginTop="1dp"
        android:gravity="right|center_horizontal"
        android:text="@string/quantity"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ingredient_measure"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="start|center_horizontal"
        android:text="@string/measure"
        app:layout_constraintStart_toEndOf="@+id/ingredient_quantity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipe_detail_ingredient_text"
        style="@style/recipe_ingredient"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:gravity="start|center_horizontal"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="@+id/ingredient_quantity"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>